--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "express": "^4.18.0",
     "node-telegram-bot-api": "^0.64.0",
-    "node-php-server": "^1.0.0"
+    "node-cron": "^3.0.3"
   },
   "engines": {
     "node": ">=18"
