--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "express": "^4.18.0",
     "node-telegram-bot-api": "^0.64.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "mysql2": "^3.6.0",
+    "sequelize": "^6.33.0"
   },
   "engines": {
     "node": ">=18"
