--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Telegram Bot for Word Game with Multiplayer",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.0",
     "node-telegram-bot-api": "^0.64.0",
     "node-cron": "^3.0.3",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "ws": "^8.14.0"
   },
   "engines": {
     "node": ">=18"
