--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "node-telegram-bot-api": "^0.64.0",
     "node-cron": "^3.0.3",
     "pg": "^8.11.0",
-    "ws": "^8.14.0"
-  },
+    "ws": "^8.14.0",
+    "cors": "^2.8.5"
+  }
+
   "engines": {
     "node": ">=18"
   }
