--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "telegram-word-bot",
+  "name": "wordly-bot",
   "version": "1.0.0",
-  "description": "Telegram Bot for Word Game with Multiplayer",
+  "description": "Wordly Telegram Bot",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "node-telegram-bot-api": "^0.64.0",
-    "node-cron": "^3.0.3",
-    "pg": "^8.11.0",
-    "ws": "^8.14.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "telegraf": "^4.16.3",
+    "pg": "^8.11.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18.0.0"
   }
 }
