--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "wordly-bot",
+  "name": "wordly-api",
   "version": "1.0.0",
-  "description": "Wordly Telegram Bot",
+  "description": "Wordly Game API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "telegraf": "^4.16.3",
     "pg": "^8.11.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5"
   },
   "engines": {
     "node": ">=18.0.0"
