--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "wordly-api",
+  "name": "wordly-game",
   "version": "1.0.0",
-  "description": "Wordly Game API",
+  "description": "Wordly Telegram Game",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "telegraf": "^4.16.3",
     "pg": "^8.11.3",
     "cors": "^2.8.5"
   },
