--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "wordly-game",
+  "name": "wordly-game-server",
   "version": "1.0.0",
-  "description": "Wordly Telegram Game",
+  "description": "Word guessing game server for Telegram bot",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "telegraf": "^4.16.3",
-    "pg": "^8.11.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "telegraf": "^4.15.3",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=14.0.0"
   }
 }
