--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "wordly-bot-backend",
+  "name": "wordly-telegram-backend",
   "version": "1.0.0",
-  "description": "Telegram Word Game Bot",
+  "description": "Backend for Telegram Mini App Wordly Game",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.64.0",
-    "pg": "^8.11.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "socket.io": "^4.7.2",
-    "axios": "^1.5.0",
-    "body-parser": "^1.20.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.12.0",
+    "socket.io": "^4.7.5"
   }
 }
