--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "dotenv": "^16.4.5",
     "pg": "^8.11.3",
     "pg-pool": "^3.6.1",
     "socket.io": "^4.7.4",
