--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "wordly-backend",
+  "name": "wordly-pro",
   "version": "1.0.0",
-  "description": "Backend server for the Wordly Telegram Game, using Express, Socket.io, and PostgreSQL.",
+  "description": "Professional Word Game Platform",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "dotenv": "^16.4.5",
+    "socket.io": "^4.7.5",
     "pg": "^8.11.3",
-    "pg-pool": "^3.6.1",
-    "socket.io": "^4.7.4",
-    "node-telegram-bot-api": "^0.61.0" 
-  }
+    "cors": "^2.8.5",
+    "node-telegram-bot-api": "^0.64.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "game",
+    "word",
+    "multiplayer",
+    "telegram"
+  ],
+  "author": "Wordly Team",
+  "license": "MIT"
 }
