--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "socket.io": "^4.7.5",
     "pg": "^8.11.3",
