--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "express-rate-limit": "^7.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.5",
     "pg": "^8.11.3",
