--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "compression": "^1.7.4",
     "express-rate-limit": "^7.3.1",
     "express": "^4.18.2",
+    "telegraf": "^4.16.3",
     "socket.io": "^4.7.5",
     "pg": "^8.11.3",
     "cors": "^2.8.5",
