--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "telegraf": "^4.16.3",
     "socket.io": "^4.7.5",
     "pg": "^8.11.3",
+    "dotenv": "^16.4.5",
     "uuid": "^9.0.1",
     "cors": "^2.8.5",
     "node-telegram-bot-api": "^0.64.0"
